refactor: изменен тип списка хранения истории на Linked