@@ -2,18 +2,18 @@ package com.taskmanager;
 
 import com.taskmanager.tasks.Task;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager{
 
-    private List<Task> history = new ArrayList<>();
+    private LinkedList<Task> history = new LinkedList<>();
 
     // Добавление элемента в список просмотров
     @Override
     public void add(Task task) {
         if (history.size() >= 10) {
-            history.remove(0);
+            history.removeFirst();
             history.add(task);
         } else {
             history.add(task);
